# Sudeep_Knowledge_Base

./: .gitignore
.github/workflows/: update-readme-and-embeddings.yml
chatbot/client/: .gitignore  .lintstagedrc.json  .markdownlint.json  .prettierignore  .prettierrc.json  README.md  azure-static-web-apps-deploy.yml  cspell.json  cspelldictionary.txt  docs_liniting_pipeline.yml  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  staticwebapp.config.json
chatbot/client/blog/: authors.yml  tags.yml
chatbot/client/blog/2024-08-23-welcome/: index.md
chatbot/client/docs/AI360/: Overview.md
chatbot/client/docs/Azure360/: Introduction.md
chatbot/client/docs/CodingStandards/: Software Engineer Practices.md  c4_model.md
chatbot/client/docs/DevOps/: AcceptanceTable.md  AdoptionProcess.md  GITVersionControl.md  (+4 more)
chatbot/embeddings/: commit_hash.txt  index.pkl
chatbot/server/: .env.example  README.md  pyproject.toml
chatbot/server/app/: config.py  main.py
chatbot/server/app/api/v1/endpoints/: chat_with_knowledge_base.py  socket.py
chatbot/server/app/api/v1/models/: chat_with_knowledge_base.py
chatbot/server/app/functions/: chat_with_knowledge_base.py
chatbot/server/app/llm/: gemini.py
chatbot/server/app/notebooks/: embed_docs.ipynb
chatbot/server/app/prompts/: chat_with_knowledge_base.py
chatbot/server/scripts/: update_embeddings.py
chatbot/server/static/: asset-manifest.json  index.html
chatbot/server/static/css/: main.28eedf3a.css  main.28eedf3a.css.map
chatbot/server/static/js/: main.3eb009c6.js  main.3eb009c6.js.LICENSE.txt
(+194 files in other folders)
